fix timer alignment

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -352,6 +352,7 @@ body {
 
   #timer {
     padding: 8px 20px;
+    margin-top: -40px;
     
     .time {
       margin: 8px 10px;
